--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>Dinajpur Polytechnic Institute</p>
     <p>Bangladesh is my favorite country</p>
     <p>Dinajpur is a small District</p>
+    <p>I love you</p>
+    <p>Amr sonar Bangla Ami tomay valobashi</p>
     
 </body>
 </html>
