--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second Repository</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>Mst Shapla Akter</p>
@@ -13,6 +14,8 @@
     <p>Dinajpur is a small District</p>
     <p>I love you</p>
     <p>Amr sonar Bangla Ami tomay valobashi</p>
+    <p>I read in Dinajpur Polytechnic Institute of Diploma Engneearing</p>
+    <p>Studies at Dinajpur Polytechnic Institute</p>
     
 </body>
 </html>
