--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <p>Amr sonar Bangla Ami tomay valobashi</p>
     <p>I read in Dinajpur Polytechnic Institute of Diploma Engneearing</p>
     <p>Studies at Dinajpur Polytechnic Institute</p>
+    <p>Ami tomay valobashi asif</p>
+    <p>Happy New Year 2023</p>
+    <p>Father and mother is my friend</p>
     
 </body>
 </html>
